Better calculations at the race area. Added a "formation lap"-score. Added qualifying bonus to formation lap.

--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
@@ -24,7 +24,10 @@
             if (RaceDriver == null)
                 return new();
 
+            // Filters out the lapscore created on formation
             return RaceDriver.LapScores
+                .Where(e => e.Order > 0)
+                .ToList()
                 .ConvertAll(e => (NumberHelper.Percentage(1, CalculationCount), e.TyreColour ?? Globals.DefaultColour));
         }
     }
