--- a/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
@@ -5,7 +5,9 @@
         <span style="@(BarStyle(bar.Item1, bar.Item2))">
             @if (AddIndicator && (index % 2 == 0))
             {
-                <MudText Typo="Typo.h5" Style="font-size: 0.75rem">@(IndicatorText(1 + index))</MudText>
+                <MudText Typo="Typo.h5" Style="font-size: 0.75rem">
+                    @(IndicatorText(1 + index))
+                </MudText>
             }
         </span>
     }
