--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -513,6 +513,18 @@ th {
         padding: 8px 1px;
     }
 
+.incident-col {
+    width: 30px;
+    padding: 10px 10px 80px 10px !important;
+    text-align: center !important;
+}
+
+    .incident-col .rotated-text {
+        padding: 10px !important;
+        text-align: center !important;
+        transform: rotate(90deg);
+    }
+
 .number-col, .number-col-lg, .number-col-xl {
     padding: 10px !important;
     text-align: center !important;
