--- a/SimTECH/SimTECH/Pages/Test/Index.razor
+++ b/SimTECH/SimTECH/Pages/Test/Index.razor
@@ -18,6 +18,7 @@
             <MudItem xs="12">
                 <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
                     <div class="header-special">Testing Zone</div>
+                    <div class="font-roadrage">For hella blokes</div>
                 </MudPaper>
             </MudItem>
             <MudItem xs="9">
