--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
@@ -7,7 +7,7 @@
             <ScreenshotIconButton TargetId="power-rankings-overview" Colour="Color.Tertiary" />
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="PowerRankingItem" Items="@PowahList" Dense="true" Loading="@loading">
+    <MudDataGrid T="PowerRankingItem" Items="@PowahList" Dense="true" Loading="@Loading">
         <Columns>
             <HierarchyColumn T="PowerRankingItem" />
             <TemplateColumn T="PowerRankingItem" SortBy="e => e.DriverName" Title="Driver">
@@ -75,22 +75,14 @@
                     <MudStack AlignItems="AlignItems.Center">
                         <MudText>Wear modifiers</MudText>
                         <MudDivider />
-                        <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
-                            <MudText Typo="Typo.caption">@context.Item.WearMin</MudText>
-                            <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
-                            <MudText Typo="Typo.caption">@context.Item.WearMax</MudText>
-                        </MudStack>
+                        <RangeDisplay LeftValue="@context.Item.WearMin" RightValue="@context.Item.WearMax" />
                     </MudStack>
                 </MudPaper>
                 <MudPaper Class="px-4 py-2">
                     <MudStack AlignItems="AlignItems.Center">
                         <MudText>RNG modifiers</MudText>
                         <MudDivider />
-                        <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
-                            <MudText Typo="Typo.caption">@context.Item.RngMin</MudText>
-                            <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
-                            <MudText Typo="Typo.caption">@context.Item.RngMax</MudText>
-                        </MudStack>
+                        <RangeDisplay LeftValue="@context.Item.RngMin" RightValue="@context.Item.RngMax" />
                     </MudStack>
                 </MudPaper>
             </MudStack>
@@ -107,7 +99,7 @@
 
     private List<Trait> Traits { get; set; } = new();
 
-    private bool loading = true;
+    private bool Loading { get; set; } = true;
 
     protected override async Task OnInitializedAsync()
     {
@@ -128,7 +120,10 @@
 
             var relevantTraits = Traits.Where(e => driverTraitIds.Contains(e.Id) || teamTraitIds.Contains(e.Id)).ToList();
 
-            var basePower = driver.Skill + driver.RetrieveStatusBonus(TeamRoleCarModifier) + team.BaseValue + engine.Power;
+            var basePower = driver.Skill
+                + driver.RetrieveStatusBonus(TeamRoleCarModifier)
+                + team.BaseValue + team.Aero + team.Chassis + team.Powertrain
+                + engine.Power;
 
             var listing = new PowerRankingItem
             {
@@ -161,9 +156,8 @@
             PowahList.Add(listing);
         }
 
-        loading = false;
+        Loading = false;
     }
 
-    private Func<PowerRankingItem, string> SimpleCellStyle => power =>
-        ViewHelper.SetBorderRightStyle(power.Colour);
+    private Func<PowerRankingItem, string> SimpleCellStyle => power => ViewHelper.SetBorderRightStyle(power.Colour);
 }
