More landing info + theme idea additions

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -176,9 +176,26 @@
                 <MudText Typo="Typo.h5" Color="Color.Default">@Model.Climate.Terminology</MudText>
             </CustomIcon>
 
+            <MudSimpleTable>
+                <thead>
+                    <tr>
+                        <th>ENG</th>
+                        <th>REL</th>
+                        <th>RNG</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@Model.Climate.EngineMultiplier</td>
+                        <td>@Model.Climate.ReliablityModifier</td>
+                        <td>@Model.Climate.RngModifier</td>
+                    </tr>
+                </tbody>
+            </MudSimpleTable>
+
             <MudText Typo="Typo.subtitle1">Bob</MudText>
             <MudText Class="my-2">
-                Praise be but also be aware
+                Carefulness equalizes smartfulness
             </MudText>
 
             <MudText Typo="Typo.subtitle1">Help</MudText>
