Added in setup columns, literally all I did

--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/CommonSession.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/CommonSession.razor
@@ -22,6 +22,7 @@
             {
                 <MudTh Class="number-col">CLA</MudTh>
             }
+            <MudTh Class="number-col">Setup</MudTh>
             <MudTh Class="number-col-xl">PWR</MudTh>
             @for (int i = 1; i <= AmountRuns; i++)
             {
@@ -67,6 +68,9 @@
                     </SupplierDisplay>
                 </MudTd>
             }
+            <MudTd Class="number-col">
+                <MudText Typo="Typo.caption">@context.Setup</MudText>
+            </MudTd>
             <MudTd Class="number-col-xl">
                 <MudText Typo="Typo.caption">@context.Power</MudText>
             </MudTd>
