Supporting further guide changes 'ere

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -171,14 +171,18 @@
             <MudText Typo="Typo.h5">Weekend</MudText>
             <MudDivider />
 
-            <MudText Typo="Typo.subtitle1">Weather</MudText>
-            <CustomIcon Icon="@Model.Climate.Icon" Colour="@Model.Climate.Colour">
-                <MudText Typo="Typo.h5" Color="Color.Default">@Model.Climate.Terminology</MudText>
-            </CustomIcon>
+            <MudText Typo="Typo.subtitle1" Class="mt-2">Bob</MudText>
+            <MudText Class="my-2">
+                Carefulness equalizes smartfulness
+                <br />
+                Mindfulness equalizes brain smoothening
+            </MudText>
 
-            <MudSimpleTable>
+            <MudText Typo="Typo.subtitle1">Weather</MudText>
+            <MudSimpleTable Bordered="true" Dense="true" Class="extra-dense">
                 <thead>
                     <tr>
+                        <th>Type</th>
                         <th>ENG</th>
                         <th>REL</th>
                         <th>RNG</th>
@@ -186,33 +190,34 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>@Model.Climate.EngineMultiplier</td>
-                        <td>@Model.Climate.ReliablityModifier</td>
-                        <td>@Model.Climate.RngModifier</td>
+                        <td>
+                            <CustomIcon Icon="@Model.Climate.Icon" Colour="@Model.Climate.Colour">
+                                <MudText Typo="Typo.h5" Color="Color.Default">@Model.Climate.Terminology</MudText>
+                            </CustomIcon>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.caption">@Model.Climate.EngineMultiplier</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.caption">@Model.Climate.ReliablityModifier</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.caption">@Model.Climate.RngModifier</MudText>
+                        </td>
                     </tr>
                 </tbody>
             </MudSimpleTable>
 
-            <MudText Typo="Typo.subtitle1">Bob</MudText>
-            <MudText Class="my-2">
-                Carefulness equalizes smartfulness
-            </MudText>
-
-            <MudText Typo="Typo.subtitle1">Help</MudText>
-            <MudText Class="my-2" Typo="Typo.body2" Color="Color.Info">
-                <MudIcon Icon="@IconCollection.Target" Size="Size.Small" />
-                [TGT]: Target position
-            </MudText>
-
+            <MudText Typo="Typo.subtitle1">Haan notifications</MudText>
             <MudText Class="my-2" Typo="Typo.body2" Color="Color.Warning">
-                Yes, I'm aware traits look ugly. Working on a good solution for this still.
+                Yes, I'm aware traits look ugly. Utilizing brain power still on knowing how to display this nicely.
             </MudText>
 
             <MudText Typo="Typo.subtitle1">Tyre suppliers</MudText>
             <MudTable Items="@TyreSuppliers" Bordered="true" Dense="true">
                 <HeaderContent>
                     <MudTh>Name</MudTh>
-                    <MudTh>Life Bonus</MudTh>
+                    <MudTh>Bonus</MudTh>
                     <MudTh>Wear</MudTh>
                 </HeaderContent>
                 <RowTemplate>
@@ -231,6 +236,83 @@
                     </MudTd>
                 </RowTemplate>
             </MudTable>
+
+            <MudText Typo="Typo.subtitle1">Abbreviations</MudText>
+            <MudText Typo="Typo.body2" Color="Color.Info">This table only stays here until i'm sure all you smoothbrains have memorized this</MudText>
+            <MudSimpleTable Bordered="true" Dense="true" Class="extra-dense">
+                <thead>
+                    <tr>
+                        <th>ABB</th>
+                        <th>What</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">ABB</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Abbreviation</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">ENG</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Engine</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">PWR</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Power</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">REL</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Reliability</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">RNG</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Jesus</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">STP</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Setup</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">SUP</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Tyre supplier</MudText>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <MudText Typo="Typo.caption">TGT</MudText>
+                        </td>
+                        <td>
+                            <MudText Typo="Typo.body2">Target position</MudText>
+                        </td>
+                    </tr>
+                </tbody>
+            </MudSimpleTable>
         </MudPaper>
     </MudItem>
 </MudGrid>
