--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
@@ -55,8 +55,8 @@
         <MudText Typo="Typo.subtitle1">Type</MudText>
     </MudTooltip>
     <MudChipSet SelectedChipChanged="TypeChipChanged" Mandatory="true" Class="d-flex flex-row">
-        <MudChip Color="Color.Tertiary" Value="Quantifier.Range" Default="true" Class="flex-1">Range</MudChip>
-        <MudChip Color="Color.Tertiary" Value="Quantifier.Set" Class="flex-1">Set</MudChip>
+        <MudChip Color="Color.Tertiary" Value="Quantifier.Set" Default="true" Class="flex-1">Set</MudChip>
+        <MudChip Color="Color.Tertiary" Value="Quantifier.Range" Class="flex-1">Range</MudChip>
         <MudChip Color="Color.Tertiary" Value="Quantifier.Direct" Class="flex-1">Direct</MudChip>
     </MudChipSet>
 </MudStack>
