--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -34,7 +34,7 @@
             }
         </MudMenu>
 
-        <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Dark" />
+        <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Secondary" />
 
         <MudPopover Open="@isHelpOpen"
                     AnchorOrigin="Origin.BottomRight"
