--- a/SimTECH/SimTECH/Pages/Guide/Topics/Glossary.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/Glossary.razor
@@ -1,7 +1,7 @@
 ﻿<MudText Typo="Typo.h6">Race</MudText>
 <MudDivider Class="my-1" />
 
-<MudTable T="GlossaryItem" Items="@glossaryTerms.OrderBy(e => e.Term)" Dense="true">
+<MudTable T="GlossaryItem" Items="@GlossaryTerms.OrderBy(e => e.Term)" Dense="true">
     <HeaderContent>
         <MudTh>Term</MudTh>
         <MudTh>Explain</MudTh>
@@ -31,7 +31,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var abb in abbreviations.OrderBy(e => e.Key))
+        @foreach (var abb in Abbreviations.OrderBy(e => e.Key))
         {
             <tr>
                 <td>@abb.Key</td>
@@ -42,7 +42,7 @@
 </MudSimpleTable>
 
 @code {
-    private static readonly GlossaryItem[] glossaryTerms = new GlossaryItem[]
+    private static readonly GlossaryItem[] GlossaryTerms = new GlossaryItem[]
         {
             new GlossaryItem("Advance",
                 @"A single round of calculation for every driver during a race. Equivalent for a certain distance 
@@ -53,12 +53,20 @@
                 Usually refers to practice and qualifying."),
         };
 
-    private static readonly Dictionary<string, string> abbreviations = new()
+    private static readonly Dictionary<string, string> Abbreviations = new()
     {
         { "CHA", "Chassis" },
         { "LB", "Life bonus" },
         { "PTS", "Points" },
         { "TGT", "Target" },
+        { "ENG", "Engine" },
+        { "PWR", "Power" },
+        { "REL", "Reliability" },
+        { "RNG", "Ask jesus for this" },
+        { "STP", "Setup" },
+        { "SUP", "Tyre supplier" },
+        { "AER", "Aero" },
+        { "POW", "Powertrain" },
     };
 
     internal class GlossaryItem
