--- a/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
@@ -1,4 +1,6 @@
-﻿<MudText Typo="Typo.h6">FAQ</MudText>
+﻿@* @page "/guide/intro" *@
+
+<MudText Typo="Typo.h6">FAQ</MudText>
 <MudDivider Class="my-1" />
 
 <MudText>
